<resources>
    <string name="app_name">Restaurant Timer App</string>
    <string name="tv1">Bigger</string>
    <string name="tv2">Strips</string>
    <string name="tv3">Wings</string>
    <string name="tv4">Bites</string>
    <string name="tv5">Drumsticks</string>
    <string name="tv6">Sanders</string>
    <string name="tv7">French fries</string>
    <string name="tv8">Salad</string>
    <string name="btnReset">Reset all</string>
    <string name="btnApply">Apply</string>
    <string name="reset">Reset</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="editTextCheck">Please enter number of seconds to set</string>
    <string name="outOfTime">is out of time</string>
    <string name="chr">chronometer</string>
    <string name="toggleBtn">toggleButton</string>
    <string name="chrCurrentTime">chronometerCurrentTime</string>
    <string name="chrStartTime">chronometerStartTime</string>
    <string name="id">id</string>
    <string name="enter_seconds">Enter seconds</string>
    <string name="zeroTime">00:00</string>
    <string name="action_settings">Settings</string>


    <string-array name="chronometerId">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <integer-array name="chrInitValues">
        <item>10</item>
        <item>20</item>
        <item>60</item>
        <item>120</item>
        <item>5</item>
        <item>30</item>
        <item>15</item>
        <item>180</item>
    </integer-array>
</resources>
